@startuml

left to right direction

class Tipo {
    -tipo: string
    -id: number autoincrement
    -descricao: string
}

class Usuario{
    -id: number matricula/siapi
    -nome: string
    -email: string
    -cpf: number
    -senha: string
    -tipo: Tipo
    -isNutricionista: boolean
    -createAt: Date
    -updateAt: Date
}

class Cardapio{
    -id: number
    -data: Date
    -createAt: Date
    -updateAt: Date
}

class Refeicao{
    -id: number
    -tipo: string
    -anotacao: string
}

class Prato{
    -id: number
    -preferencia_Alimentar: string
}

class Igrediente{
    -id: number
    -nome: string
}

Usuario --- Tipo: 1 - 1
Usuario --- Cardapio: n - n
Cardapio -- Refeicao: n - n
Refeicao -- Prato: n - n
Prato --- Igrediente: n - n

@enduml